# arxiv_papers_classifier

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  app.py  prepare_data.ipynb  prepare_more_data.ipynb  test.py  torch_primitives.py  train.ipynb
