[project]
name = "arxiv-papers-classifier"
version = "0.1.0"
description = "Arxiv papers classifier"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "arxiv>=2.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.44.1",
    "torch>=2.6.0",
    "transformers>=4.51.0",
]
